# torchrir

./: .gitignore  README.md  conda_pip-only_requirements.txt  conda_requirements.txt  create_venv.sh  pyproject.toml  requirements.txt  run_tests.sh
.github/workflows/: python-package.yml  sphinx-gh-pages.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  docstrings_parser.py  index.md
docs/source/_static/: custom.css
docs/source/guides/: convex_room.ipynb  random_rays.ipynb  validity.ipynb
samples/: random_rays_on_1_simplice.py  random_rays_on_random_simplices.py  random_source_images.py  shoebox_rir.py  shoebox_room_source_images.py
tests/: test_geometry.py
torchrir/: __init__.py  geometry.py  source.py
